--- a/StaticWebApp/StaticWebApp/ClientApp/src/app/home/home.component.html
+++ b/StaticWebApp/StaticWebApp/ClientApp/src/app/home/home.component.html
@@ -1,1 +1,2 @@
-<iframe src='https://webchat.botframework.com/embed/CovidBot_CS?s=-AN40xtMuxM.THdeq_nEURfTWVTr3j2NkuzPuceo5eDvZjYlRsJ2v-8'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+<iframe src='https://webchat.botframework.com/embed/CovidBot_CS?s=w3WkEfHV6VI.QCf5DmA8vPGJRdCxF8GqA3dz9o97_kdMRzZirJgnYAA' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+
